--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+AMQP_HOST=localhost
+AMQP_PORT=5672
+AMQP_USER=guest
+AMQP_PASSWORD=guest
+AMQP_VHOST=/
